# statistic_platform

./: .gitignore  README.md  deploy.sh  docker-compose.yml  main.py  pyproject.toml  structure.txt  test.py
backend/: .dockerIgnore  Dockerfile  main.py  pyproject.toml  requirements.txt
backend/costomTools/: __init__.py  writeAnovaResult.py
backend/stat_code/: anova.py  base.py  independentTtest.py  repeatedAnova.py
check/: return_info
costomTools/: __init__.py  santize.py
frontend/: Dockerfile  config.js  nginx.conf  statisticList.html
frontend/sample/: ANOVA_example.xlsx  paireed_t_test_example.xlsx
frontend/subpage/: anova.html  anova_old.html  independentTtest.html  independentTtestnew.html  pairedTtest.html
html/: independentTtest.html  statisticList.html  style.css  tmp.html
html/sample/: t_test_data.xlsx
html/subpage/: anova.html  independentTtest.html  pairedTtest.html
old_version/: app.py
stat_code/: __init__.py  independentTtest.py  ok.py  pairedTtest.py
