[project]
name = "1214-loadfiles"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.124.4",
    "flask>=3.1.2",
    "flask-cors>=6.0.2",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "python-multipart>=0.0.20",
    "scipy>=1.15.3",
    "uvicorn>=0.38.0",
]
